# scientificstate

./: .gitignore  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK_POLICY.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
Core/daemon/: .gitignore  pyproject.toml
Core/daemon/src/: __init__.py  main.py
Core/daemon/src/cli/: __init__.py  module_cli.py
Core/daemon/src/compute/: __init__.py  backend.py  classical.py
Core/daemon/src/routes/: audit.py  claims.py  diagnostics.py  discovery.py  domains.py  export.py  health.py  ingest.py  modules.py  monitoring.py  qpu_admin.py  questions.py  registry.py  replication.py  runs.py  workspaces.py
Core/daemon/src/runner/: cost_gate.py  orchestrator.py
Core/daemon/src/storage/: domain_registry.py  ingest.py  replication_store.py  schema.py  schema.sql
Core/daemon/tests/: conftest.py  test_alerting.py  test_audit.py  test_cost_gate.py  test_diagnostics.py  test_discovery_routes.py  test_domain_detail.py  test_e2e_flow.py  test_export_routes.py  test_federation_governance.py  test_federation_sync.py  test_hybrid_backend.py  test_integration_hardening.py  test_integration_phase8.py  test_module_cli.py  test_module_endpoints.py  test_module_routes.py  test_monitoring.py  test_performance.py  test_performance_benchmark.py  test_platform_smoke.py  test_qpu_resilience.py  test_quantum_backend.py  test_quantum_hw_backend.py  test_quantum_sim_backend.py  test_recommendation.py  test_registry_air_gapped.py  test_registry_routes.py  test_replication_routes.py  test_run_routes.py  test_trending.py  test_workspace_routes.py
Core/framework/: pyproject.toml
Core/framework/scientificstate/: __init__.py  pipeline.py
Core/framework/scientificstate/claims/: __init__.py  factory.py  gate_evaluator.py  lifecycle.py
Core/framework/scientificstate/discovery/: __init__.py  citation.py  impact.py  recommendation.py  trending.py
Core/framework/scientificstate/domain_registry/: __init__.py  registry.py
Core/framework/scientificstate/evidence/: __init__.py
Core/framework/scientificstate/modules/: __init__.py  auto_detect.py  format_map.json  manager.py  quantum_eligibility.py  registry_client.py  revocation.py  signer.py  sigstore_verify.py  verifier.py
Core/framework/scientificstate/replication/: __init__.py  comparison.py  engine.py  protocol.py
Core/framework/scientificstate/runs/: __init__.py  lifecycle.py  model.py
Core/framework/scientificstate/ssv/: __init__.py  factory.py  model.py  validator.py
Core/framework/scientificstate/standards/: __init__.py  cwl.py  openlineage.py  output_formats.py  prov.py  rocrate.py
Core/framework/scientificstate/workspaces/: __init__.py  model.py
Core/framework/tests/: test_air_gapped.py  test_auto_detect.py  test_citation.py  test_claim_factory.py  test_cross_domain.py  test_cwl.py  test_distribution_e2e.py  test_domain_agnostic.py  test_domain_registry.py  test_gate_evaluator.py  test_gate_replication.py  test_impact.py  test_module_manager.py  test_module_revocation.py  test_module_signer.py  test_module_verifier.py  test_offline_verify.py  test_openlineage.py  test_output_formats.py  test_pipeline.py  test_prov.py  test_quantum_classical_baseline.py  test_quantum_gate_rules.py  test_quantum_pipeline.py  test_recommendation.py  test_registry_failover.py  test_registry_offline.py  test_replication_comparison.py  test_replication_db.py  test_replication_engine.py  test_rocrate.py  test_run_lifecycle.py  test_run_model.py  test_sandbox_config.py  test_sandbox_linux.py  test_sandbox_macos.py  test_sandbox_windows.py  test_sigstore_mandatory.py  test_sigstore_verify.py  test_smoke.py  (+10 more)
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/src-tauri/capabilities/: main.json
Desktop/src-tauri/src/: lib.rs  main.rs
Domains/biology/: pyproject.toml  scientificstate-domain.json
Domains/biology/biology/: __init__.py  domain_manifest.py  result_adapter.py
Domains/biology/biology/methods/: __init__.py  cell_viability.py  gel_electrophoresis.py  pcr.py
Domains/biology/tests/: test_cell_viability.py  test_gel_electrophoresis.py  test_integration.py  test_pcr.py  test_result_adapter.py
Domains/chemistry/: pyproject.toml  scientificstate-domain.json
Domains/chemistry/chemistry/: __init__.py  domain_manifest.py  result_adapter.py
Domains/chemistry/chemistry/methods/: __init__.py  hplc.py  titration.py  uv_vis.py
Domains/chemistry/tests/: test_hplc.py  test_integration.py  test_result_adapter.py  test_titration.py  test_uv_vis.py
Domains/polymer/: domain_manifest.py  pyproject.toml
Domains/polymer/polymer_science/: __init__.py  domain_manifest.py  pipeline.py  result_adapter.py  utils.py
Domains/polymer/polymer_science/data/: __init__.py  fragment_db.json
Domains/polymer/polymer_science/io/: __init__.py  pygcms_reader.py
Domains/polymer/polymer_science/methods/: __init__.py  deisotoping.py  fragment_matching.py  (+3 more)
Domains/polymer/tests/: conftest.py  test_backend_integration.py  test_execute_method_invalid_input.py  test_execute_method_smoke.py  test_list_methods_schema.py  test_real_data_path.py  test_result_adapter.py  test_smoke.py
(+334 files in other folders)
