[project]
name = "scientificstate-daemon"
version = "0.1.0"
description = "ScientificState local execution daemon — FastAPI sidecar"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "scientificstate-framework",
]

[project.optional-dependencies]
quantum = ["qiskit>=1.0", "qiskit-aer>=0.13"]

[project.scripts]
daemon = "src.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
scientificstate-framework = { path = "../framework", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
