[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scientificstate-framework"
version = "0.1.0"
description = "Domain-agnostic scientific state management framework"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["scientificstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
