[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scientificstate-framework"
version = "0.1.0"
description = "Domain-agnostic scientific state management framework"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "cryptography>=42.0"]

[project.optional-dependencies]
sigstore = ["sigstore>=3.0"]
standards = ["pyarrow>=14.0", "zarr>=2.16", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["scientificstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
