[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymer-science"
version = "0.1.0"
description = "Polymer analysis domain module for ScientificState"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "scientificstate-framework",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jsonschema>=4.0", "ruff>=0.4.0"]

[tool.uv.sources]
scientificstate-framework = { path = "../../Core/framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["polymer_science"]

[project.entry-points."scientificstate.domains"]
polymer_science = "polymer_science.domain_manifest:PolymerScienceDomain"
